Fix flex wrapping for education and skills section

--- a/components/education/education.module.css
+++ b/components/education/education.module.css
@@ -1,5 +1,5 @@
 .education {
-    flex: 1;
+    flex: 1 1 200px;
 }
 
 .institute {
