--- a/components/skills/skills.module.css
+++ b/components/skills/skills.module.css
@@ -1,5 +1,5 @@
 .skills {
-    flex: 2;
+    flex: 2 1 400px;
 }
 
 .skill-grid {
